# boxchar

./: .gitignore  ALGORITHM.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build-dictionary.sh  build-web.sh  build_wordlist.sh
.github/workflows/: deploy.yml
data/: answers.txt  dictionary_test.txt  game.txt  singles.txt  wordlist.txt  wordlist_test.txt
src/: algorithmx.rs  board.rs  build_digraph_list.rs  dictionary.rs  game.rs  lib.rs  main.rs  solver.rs  solverx.rs  wasm.rs  wordlist.rs  wordlist_builder.rs
tests/: board.rs  board_validation.rs  game.rs  game_validation.rs  solver.rs  word_filtering.rs  wordlist.rs
tests/common/: mod.rs
web/: index.html
web/svelte-app/: .gitignore  README.md  endarken-color.js  endarken-css-vars.zsh  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vite.config.ts
web/svelte-app/playwright-report/: index.html
web/svelte-app/public/pkg/: boxchar.js  boxchar_bg 2.wasm  boxchar_bg 3.wasm  boxchar_bg 4.wasm  boxchar_bg.wasm
web/svelte-app/src/: App.svelte  app.css
web/svelte-app/src/lib/: ErrorDisplay.svelte  LetterBox.svelte  PuzzleLoader.svelte  SolutionsDisplay.svelte
web/svelte-app/src/stores/: puzzle.js  puzzle.ts  solver-worker.js  solver-worker.ts  wasm.js  wasm.ts
web/svelte-app/src/utils/: debounce.js  throttle.js  throttle.ts
web/svelte-app/src/workers/: solver-worker.js  solver-worker.ts
web/svelte-app/tests/: basic.spec.js  fixture.ts
