[package]
name = "boxchar"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kandalgaonkar <neilk@neilk.net>"]
license = "ISC"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
tempfile = "3.2"

[lib]
name = "boxchar"
path = "src/lib.rs"

[[bin]]
name = "boxchar"
path = "src/main.rs"
